<resources>
    <string name="app_name">PADC-Implicit-Intents</string>
    <string name="action_settings">Settings</string>
    <string name="edt_share_hint">Enter a location!</string>
    <string name="btn_share">Share</string>
    <string name="btn_see_map">See Map</string>
    <string name="edt_ph_hint">Enter a phone number!</string>
    <string name="btn_call">Call</string>
    <string name="btn_send_mail">Send Mail</string>
    <string name="btn_taking_picture">Take Picture</string>
    <string name="btn_select_pic">Select Picture</string>
    <string name="btn_save_event_calendar">Save Event in Calendar</string>
</resources>
